update README: remove project description and clarify custom message definitions

--- a/README.html
+++ b/README.html
@@ -58,10 +58,7 @@
   <body>
     <header>
       <h1>Reel-Steel Robotics Project</h1>
-      <p>
-        A comprehensive system for humanoid robot control using pose detection
-        and inverse kinematics.
-      </p>
+     
     </header>
 
     <div class="section">
@@ -109,7 +106,7 @@
         <li>
           <strong>ros_ws/</strong> - ROS workspace containing multiple packages:
           <ul>
-            <li><strong>custom_msg/</strong> - Custom message definitions</li>
+            <li><strong>custom_msg/</strong> - Custom message definitions for joint names</li>
             <li>
               <strong>graph_points/</strong> - Tools for visualizing and
               processing points
