update README files: correct repository URL and remove outdated usage examples

--- a/README.html
+++ b/README.html
@@ -146,7 +146,7 @@
       <ol>
         <li>
           Clone the repository or unpack the zip file:
-          <pre><code>git clone [REPOSITORY_URL] sd15_reel-steel
+          <pre><code>git clone https://git.las.iastate.edu/SeniorDesignComS/2025s/402c/sd15_reel-steel.gitsd15_reel-steel
 cd sd15_reel-steel</code></pre>
         </li>
         <li>
@@ -171,23 +171,7 @@ source devel/setup.bash  # On Linux/Mac
     <div class="section">
       <h2>Usage</h2>
 
-      <h3>Pose Detection Examples</h3>
-      <p>The Demo1 directory contains various scripts for pose detection:</p>
-      <pre><code>cd Demo1
-python detect_pose_image.py  # Process a single image
-python detect_pose_video.py  # Process a video file
-python detect_pose_depth_video.py  # Process video with depth information</code></pre>
-
-      <h3>Running the ROS Nodes</h3>
-      <p>To run the complete system:</p>
-      <pre><code>cd ros_ws
-source devel/setup.bash
-roslaunch kinematics main.launch  # Launch the main application</code></pre>
-
-      <h3>Visualization Tools</h3>
-      <pre><code>cd ros_ws
-source devel/setup.bash
-roslaunch graph_points visualize.launch  # Visualize pose points</code></pre>
+        <ahref = "#" ><h3>Running the Robot</h3> </a>
     </div>
 
     <div class="section">
