fix: correct HTML syntax and update documentation links in README

--- a/README.html
+++ b/README.html
@@ -165,16 +165,16 @@ source devel/setup.bash  # On Linux/Mac
     <div class="section">
       <h2>Usage</h2>
 
-        <ahref = "https://git.las.iastate.edu/SeniorDesignComS/2025s/402c/sd15_reel-steel/-/tree/main/ros_ws?ref_type=heads" ><h3>How to running the code</h3> </a>
+        <a href = "https://git.las.iastate.edu/SeniorDesignComS/2025s/402c/sd15_reel-steel/-/tree/main/ros_ws?ref_type=heads" ><h3>How to running the code</h3> </a>
     </div>
 
     <div class="section">
       <h2>Documentation</h2>
       <p>Detailed documentation can be found in the following locations:</p>
       <ul>
-        <li><a href="https://git.las.iastate.edu/SeniorDesignComS/2025s/402c/sd15_reel-steel/-/tree/main/Documents?ref_type=heads">Documentation</a> (Placeholder)</li>
-        <li><a href="https://docs.google.com/document/d/1CZ_a0L8OYOXmp1QZ9-A8OC7W3wHBLY9dLWvkfvaAQpM/edit?tab=t.0#heading=h.8brlp01066dz">Final Report</a> (Placeholder)</li>
-        <li><a href="#">Website</a> (Placeholder)</li>
+        <li><a href="https://git.las.iastate.edu/SeniorDesignComS/2025s/402c/sd15_reel-steel/-/tree/main/Documents?ref_type=heads">Documentation</a> </li>
+        <li><a href="https://docs.google.com/document/d/1CZ_a0L8OYOXmp1QZ9-A8OC7W3wHBLY9dLWvkfvaAQpM/edit?tab=t.0#heading=h.8brlp01066dz">Final Report</a> </li>
+        <li><a href="#">Website</a> </li>
       </ul>
 
       <h3>Important Research References</h3>
