--- a/README.html
+++ b/README.html
@@ -165,7 +165,7 @@ source devel/setup.bash  # On Linux/Mac
     <div class="section">
       <h2>Usage</h2>
 
-        <a href = "https://git.las.iastate.edu/SeniorDesignComS/2025s/402c/sd15_reel-steel/-/tree/main/ros_ws?ref_type=heads" ><h3>How to running the code</h3> </a>
+        <a href = "https://git.las.iastate.edu/SeniorDesignComS/2025s/402c/sd15_reel-steel/-/tree/main/ros_ws?ref_type=heads" ><h3>How to run</h3> </a>
     </div>
 
     <div class="section">
