--- a/README.html
+++ b/README.html
@@ -174,7 +174,7 @@ source devel/setup.bash  # On Linux/Mac
       <ul>
         <li><a href="https://git.las.iastate.edu/SeniorDesignComS/2025s/402c/sd15_reel-steel/-/tree/main/Documents?ref_type=heads">Documentation</a> </li>
         <li><a href="https://docs.google.com/document/d/1CZ_a0L8OYOXmp1QZ9-A8OC7W3wHBLY9dLWvkfvaAQpM/edit?tab=t.0#heading=h.8brlp01066dz">Final Report</a> </li>
-        <li><a href="#">Website</a> </li>
+        <li><a href="https://seniord.cs.iastate.edu/2025-May-15/">Website</a> </li>
       </ul>
 
       <h3>Important Research References</h3>
